--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,12 +1,12 @@
 name: Build Demo Campaign Website
 
 on:
-  push:
-    branches: ['main']
-    paths-ignore:
-      - '**/README.md'
-      - '**/*.d.ts'
-      - 'src/scripts/**'
+  # push:
+  #   branches: ['main']
+  #   paths-ignore:
+  #     - '**/README.md'
+  #     - '**/*.d.ts'
+  #     - 'src/scripts/**'
   # schedule:
   #   - cron: "0 0 * * *" # Trigger every 00:00 GMT
   workflow_dispatch:
