--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,14 +1,14 @@
-name: Build Demo Campaign Website
+name: Build and Deploy Campaign Website
 
 on:
-  # push:
-  #   branches: ['main']
-  #   paths-ignore:
-  #     - '**/README.md'
-  #     - '**/*.d.ts'
-  #     - 'src/scripts/**'
-  # schedule:
-  #   - cron: "0 0 * * *" # Trigger every 00:00 GMT
+  push:
+    branches: ['main']
+    paths-ignore:
+      - '**/README.md'
+      - '**/*.d.ts'
+      - 'src/scripts/**'
+  schedule:
+    - cron: '0 17 * * *' # Trigger every 00:00 GMT+7
   workflow_dispatch:
 
 permissions:
@@ -40,7 +40,6 @@ jobs:
       - name: Build with Astro
         run: npm run build
         env:
-          PUBLIC_DEMO_MODE: true # REMOVE THIS
           PUBLIC_FIREBASE_CONFIG: ${{ secrets.PUBLIC_FIREBASE_CONFIG }}
           ADMIN_EMAIL: ${{ secrets.ADMIN_EMAIL }}
           ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
