--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,9 +8,7 @@ on:
       - '**/*.d.ts'
       - 'src/scripts/**'
   schedule:
-    - cron: '0 5 * * *' # Trigger ever 12:00 GMT+7
-    - cron: '0 11 * * *' # Trigger ever 18:00 GMT+7
-    - cron: '0 17 * * *' # Trigger every 00:00 GMT+7
+    - cron: '0 * * * *'
   workflow_dispatch:
 
 permissions:
